[gd_scene load_steps=10 format=3 uid="uid://de2mkn6j66mxb"]

[ext_resource type="Script" uid="uid://bovowhh0n1mf2" path="res://ui/weapon_selection/weapon_selection_ui.gd" id="1_an783"]
[ext_resource type="Texture2D" uid="uid://byukgpq4ekqs4" path="res://assets/textures/bg_black_and_white.png" id="1_wmw8t"]
[ext_resource type="Texture2D" uid="uid://s58vmrup64sq" path="res://assets/textures/icon_pistol.png" id="3_arxr7"]
[ext_resource type="Texture2D" uid="uid://g8m2gqpblh63" path="res://assets/textures/icon_smg.png" id="4_cc676"]
[ext_resource type="Texture2D" uid="uid://dardw6x0uvg7j" path="res://assets/textures/icon_shotgun.png" id="5_5grgf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wmw8t"]
bg_color = Color(0.392157, 0.392157, 0.392157, 0.745098)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ir1k2"]
bg_color = Color(0, 0, 0, 0.0784314)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_75a6j"]
bg_color = Color(0, 0, 0, 0.156863)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xw0ot"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="WeaponSelectionUI" type="Control" groups=["WeaponSelectionUI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_an783")

[node name="BackgroundTexture" type="TextureRect" parent="."]
modulate = Color(0.478431, 0.478431, 0.478431, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wmw8t")
expand_mode = 1
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="PistolPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_wmw8t")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/PistolPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/PistolPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_arxr7")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/PistolPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Pistol"
horizontal_alignment = 1

[node name="PistolButton" type="Button" parent="HBoxContainer/PistolPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ir1k2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_75a6j")
theme_override_styles/normal = SubResource("StyleBoxFlat_xw0ot")

[node name="SMGPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_wmw8t")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/SMGPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/SMGPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_cc676")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/SMGPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "SMG"
horizontal_alignment = 1

[node name="SMGButton" type="Button" parent="HBoxContainer/SMGPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ir1k2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_75a6j")
theme_override_styles/normal = SubResource("StyleBoxFlat_xw0ot")

[node name="ShotgunPanel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_wmw8t")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ShotgunPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/ShotgunPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_5grgf")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/ShotgunPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Shotgun
"
horizontal_alignment = 1

[node name="ShotgunButton" type="Button" parent="HBoxContainer/ShotgunPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_ir1k2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_75a6j")
theme_override_styles/normal = SubResource("StyleBoxFlat_xw0ot")

[node name="AutoSelectTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="HBoxContainer/PistolPanel/PistolButton" to="." method="_on_pistol_button_pressed"]
[connection signal="pressed" from="HBoxContainer/SMGPanel/SMGButton" to="." method="_on_smg_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ShotgunPanel/ShotgunButton" to="." method="_on_shotgun_button_pressed"]
[connection signal="timeout" from="AutoSelectTimer" to="." method="_on_auto_select_timer_timeout"]
